Ids changed from UUID to Long